fixed header & footer overlaping elements

--- a/mobile/src/pages/cjc-footer/cjc-footer.scss
+++ b/mobile/src/pages/cjc-footer/cjc-footer.scss
@@ -1,16 +1,60 @@
 cjc-footer {
+	
+	ion-toolbar .toolbar-background {
+		background-color: #1F4E59;
+	}
+
+	.social-icons {
+		@include h-menu();
+
+		margin: 0 auto;
+		width: 15rem;
+
+
+		li {
+			padding: 0.7rem 1rem;
+		}
+
+		a {
+			display: block;
+			text-indent: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+
+			width: 3rem;
+			height: 3rem;
+			padding: 0;
+
+			&.footer-call {
+				background-image: url(../assets/img/footer-call.png);
+				background-size: cover;
+			}
+
+			&.footer-facebook {
+				background-image: url(../assets/img/footer-facebook.png);
+				background-size: cover;
+			}
+
+			&.footer-location {
+				background-image: url(../assets/img/footer-pin.png);
+				background-size: cover;
+			}
+		}
+	}
+}
+
+/*
+
+	{
 
 		position: fixed;
 		bottom: 0px;
-		//background: url(../../assets/img/footer-background.png);
+		background: url(../../assets/img/footer-background.png);
 		height: 6rem;
 		width: 100%;
-		background-color: #1F4E59;
 		padding: 10px;
 		z-index: 1000;
-
-
-/*
+	}
 	.cjc-footer-container::before {
 		content: '';
 
@@ -30,41 +74,3 @@ cjc-footer {
 	}
 */
 
-.social-icons {
-	@include h-menu();
-
-	margin: 0 auto;
-	width: 15rem;
-
-
-	li {
-		padding: 0.7rem 1rem;
-	}
-
-	a {
-		display: block;
-		text-indent: 100%;
-		white-space: nowrap;
-		overflow: hidden;
-
-		width: 3rem;
-		height: 3rem;
-		padding: 0;
-
-		&.footer-call {
-			background-image: url(../assets/img/footer-call.png);
-			background-size: cover;
-		}
-
-		&.footer-facebook {
-			background-image: url(../assets/img/footer-facebook.png);
-			background-size: cover;
-		}
-
-		&.footer-location {
-			background-image: url(../assets/img/footer-pin.png);
-			background-size: cover;
-		}
-	}
-}
-}
